# Spam-Detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  fix_confidence.py  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  data_loader.py  main.py  model_pipeline.py  predict.py  preprocessing.py  requirements-dev.txt  requirements.txt  train.py  utils.py
backend/api/: __init__.py  app.py
backend/config/: __init__.py  hyperparameters.py  settings.py
backend/data/: __init__.py  loader.py  preprocessor.py  sms_spam.csv
backend/inference/: __init__.py  batch_predictor.py  predictor.py
backend/models/: __init__.py  evaluator.py  logistic_regression_spam_pipeline.joblib  pipeline.py  trainer.py
backend/scripts/: train.py
backend/utils/: __init__.py  logging.py
data/: sms_spam.csv
data/interim/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
deploy/: docker-compose.prod.yml  docker-compose.yml
docs/: README.md  getting-started.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.js  next.config.mjs  next.config.ts  npm_ci_output.txt  npm_output.txt  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
frontend/lib/: api.ts  types.ts  utils.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/batch/: page.tsx
frontend/src/components/: BatchResults.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  PredictionResult.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
models/: logistic_regression_spam_pipeline.joblib  naive_bayes_spam_pipeline.joblib
